[package]
name = "etna_runner"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "etna"
path = "src/bin/etna.rs"

[dependencies]
regex-syntax = { path = "../regex-syntax", default-features = false, features = ["std", "unicode"] }
proptest = "1.0"
quickcheck = { path = "/Users/akeles/Programming/projects/PbtBenchmark/quickcheck-rs", features = ["etna"] }
crabcheck = { path = "/Users/akeles/Programming/projects/PbtBenchmark/crabcheck" }
hegeltest = "0.3.7"
